--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc -b --noEmit",
     "format": "prettier --write . --ignore-unknown",
     "lint": "eslint .",
     "format:lint": "bun run type-check && bun run format && bun run lint",
